# laby-1-6

./: .gitignore  CMakeLists.txt  README.md  template.c
lab_01/: 1_1.c  1_2.c  1_3.c  1_4.c
lab_02/: 2_1.c  2_2.c  2_3.c  2_4.c  2_5.c
lab_03/: 3_1.c  3_3.c  3_4.c
lab_04/: 4_1.c  4_2.c  4_3.c  4_4.c
lab_05/: 5_1.c  5_2.c  5_3.c  5_4.c
lab_06/: 6_1.c  6_2.c  6_3.c  6_4.c  6_5.c
