cmake_minimum_required(VERSION 3.26)
project(C2 C)

set(CMAKE_C_STANDARD 99)

add_executable(C2
#        lab_01/1_1.c
#        lab_01/1_2.c
#        lab_01/1_3.c
#        lab_01/1_4.c
#        lab_02/2_1.c
#        lab_02/2_2.c
#        lab_02/2_3.c
#        lab_02/2_4.c
#        lab_02/2_5.c
#        lab_03/3_1.c
#        lab_03/3_3.c
#        lab_03/3_4.c
#        lab_04/4_1.c
#        lab_04/4_2.c
#        lab_04/4_3.c
#        lab_04/4_4.c
#        lab_05/5_1.c
#        lab_05/5_2.c
#        lab_05/5_3.c
#        lab_05/5_4.c
#        lab_06/6_1.c
#        lab_06/6_2.c
        lab_06/6_3.c
        #        template.c
)
